--- a/02_loop.yml
+++ b/02_loop.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: linuxservers
-  become: yes
+  become: true
 
   tasks:
     - name: Create dir /mnt/resource/
@@ -22,7 +22,7 @@
 
     - name: Wait for downloads
       async_status:
-        jid: "{{item.ansible_job_id}}"
+        jid: "{{ item.ansible_job_id }}"
         mode: status
       retries: 300
       delay: 1
