--- a/roles/webserver/meta/main.yml
+++ b/roles/webserver/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Mathias Hauge
+  description: Install and configure httpd and php on Enterprise Linux
+  company: Komplex-it
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -27,17 +27,10 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
-  # - name: SomePlatform
-  #   versions:
-  #   - all
-  #   - 1.0
-  #   - 7
-  #   - 99.99
+  platforms:
+    - name: EL
+      versions:
+      - 8
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
