--- a/webserver.azure_rm.yml
+++ b/webserver.azure_rm.yml
@@ -1,6 +1,7 @@
 plugin: azure_rm
 auth_source: auto
-include_vm_resource_groups: matha
+include_vm_resource_groups:
+ - 'ansible-matha'
 keyed_groups:
  - prefix: tag
    key: tags
