--- a/webserver.azure_rm.yml
+++ b/webserver.azure_rm.yml
@@ -2,7 +2,7 @@ plugin: azure_rm
 auth_source: auto
 include_vm_resource_groups:
  - 'ansible-matha'
- - 'webserver-matha'
+ - 'webserver_matha'
 keyed_groups:
  - prefix: tag
    key: tags
